--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
 	%title Workout Log Application
 	= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true 
 	= javascript_include_tag 'application', 'data-turbolinks-track' => true 
+	= stylesheet_link_tag "application-print", :media => "print"
 	= csrf_meta_tags 
 %body
 	%nav.navbar.navbar-default
